--- a/updatelinux.yml
+++ b/updatelinux.yml
@@ -2,6 +2,11 @@
 - hosts: all
   become: true # Required for yum update
   tasks:
+    - name: Install python3-dnf
+      ansible.builtin.yum:
+        name: python3-dnf
+        state: present
+  tasks:
     - name: Run yum update
       ansible.builtin.yum:
         name: '*'
