--- a/updatelinux.yml
+++ b/updatelinux.yml
@@ -1,14 +1,10 @@
 ---
-- hosts: all
-  become: true # Required for yum update
+- name: Install python3-dnf via raw module
+  hosts: all
+  become: yes
   gather_facts: no
   tasks:
     - name: Install python3-dnf
       ansible.builtin.raw: dnf install -y python3-dnf
       register: result
       changed_when: "'Complete!' in result.stdout"
-  tasks:
-    - name: Run yum update
-      ansible.builtin.yum:
-        name: '*'
-        state: latest
