--- a/updatelinux.yml
+++ b/updatelinux.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install python3-dnf and run yum update
+- name: Run yum update
   hosts: all
   become: yes
   gather_facts: no  # Skip because system Python might not be ready
