--- a/updatelinux.yml
+++ b/updatelinux.yml
@@ -1,11 +1,8 @@
 ---
-- name: Run yum update
-  hosts: all
+- hosts: all
   become: yes
-  gather_facts: no  # Skip because system Python might not be ready
-
   tasks:
-    - name: Run yum update to update all packages
-      ansible.builtin.yum:
-        name: '*'
-        state: latest
+    - name: Test installing python3-dnf package
+      yum:
+        name: python3-dnf
+        state: present
