--- a/updatelinux.yml
+++ b/updatelinux.yml
@@ -1,8 +1,24 @@
 ---
-- hosts: all
+- name: Yum update on RHEL host
+  hosts: all
   become: yes
   tasks:
-    - name: Test installing python3-dnf package
+    - name: Install python3-dnf if needed
+      raw: |
+        if ! /usr/libexec/platform-python -c "import dnf" 2>/dev/null; then
+          if command -v dnf &>/dev/null; then
+            dnf install -y python3-dnf
+          elif command -v yum &>/dev/null; then
+            yum install -y python3-dnf
+          else
+            echo "No package manager found"
+            exit 1
+          fi
+        fi
+      changed_when: false
+      ignore_errors: true
+
+    - name: Update all packages
       yum:
-        name: python3-dnf
-        state: present
+        name: '*'
+        state: latest
